fixed spacing

--- a/Code/public/css/style.css
+++ b/Code/public/css/style.css
@@ -1,9 +1,6 @@
 /*-----------------------------
 | Main Window Container       |
 ------------------------------*/
-#maincontainer {
-  margin: auto 0;
-}
 * {
   box-sizing: border-box;
 }
